add form campus

--- a/src/campus.html
+++ b/src/campus.html
@@ -19,7 +19,7 @@
         </div>
     </section>
 
-    <section class="section campus">
+    <section class="section  campus">
         <div class="container">
             <div class="card__block">
                 <div class="swiper card__slider">
@@ -98,6 +98,61 @@
                 </div>
             </div>
         </div>
+
+    </section>
+
+    <section class="section  campus__form ">
+        <div class="campus__form-back img">
+            <img src="./img/campus-top.png" alt="">
+        </div>
+        <div class="container">
+            <div class="section__form">
+                <div class="section__form-info">
+                    <h3 class="campus__form-title">Erhalten Sie eine kostenlose Campus-Demo</h3>
+                    <p class="section__text">Haben Sie Fragen zum Online Campus oder möchten eine Vorführung? Nutzen Sie unser Kontaktformular – wir melden uns schnell bei Ihnen und helfen gerne weiter!</p>
+                    <div class="campus__form-email">
+                        <span>E-Mail</span>
+                        <a href="mailto:vmunteanu@pear-academy.de">vmunteanu@pear-academy.de</a>
+                    </div>
+                    <div class="campus__form-person">
+                        <div class="img">
+                            <img src="./img/person.png" alt="">
+                        </div>
+                        <div class="campus__form-person-info">
+                            <h4>Victoria</h4>
+                            <p class="section__text">Koordinatorin Online Campus</p>
+                        </div>
+                    </div>
+
+                </div>
+                <form action="" class="form form__seminar" novalidate="novalidate">
+                    <input type="hidden" name="action" value="seminar">
+                    <div class="form__input">
+                        <label>voller Name</label>
+                        <input type="text" name="name" placeholder="Max Mustermann">
+                    </div>
+                    <div class="form__input">
+                        <label>Telefonnummer</label>
+                        <input type="text" name="phone" placeholder="+49 XXX XXXXXXXX">
+                    </div>
+                    <div class="form__input">
+                        <label>E-Mail</label>
+                        <input type="text" name="email" placeholder="example@mail.com">
+                    </div>
+                    <div class="form__input textarea">
+                        <label>Deine Anfrage</label>
+                        <textarea name="message" placeholder="Ich möchte..."></textarea>
+                    </div>
+                    <div class="form__checkbox">
+                        <input type="checkbox" id="check" name="policy_terms">
+                        <label for="check">Ich habe die <a href="">Datenschutzerklärung </a> gelesen und stimme der Verarbeitung meiner Daten zur Kontaktaufnahme und Bearbeitung meiner Anfrage zu.</label>
+                    </div>
+                    <button class="section__button primary">Senden</button>
+                </form>
+            </div>
+
+        </div>
+
 
     </section>
 
