--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
                         <textarea name="message" placeholder="Ich möchte..."></textarea>
                     </div>
                     <div class="form__checkbox">
-                        <input type="checkbox" id="check" checked name="policy_terms">
+                        <input type="checkbox" id="check"  name="policy_terms">
                         <label for="check">Ich habe die <a href="">Datenschutzerklärung </a> gelesen und stimme der Verarbeitung meiner Daten zur Kontaktaufnahme und Bearbeitung meiner Anfrage zu.</label>
                     </div>
                    <button class="section__button primary">Senden</button>
