--- a/.tmp/impressum.html
+++ b/.tmp/impressum.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="wrap">
+<div class="wrap wrap__black">
   <header class="header" >
       <div class="container">
           <div class="header__flex">
@@ -98,163 +98,70 @@
       </div>
   </div>
 
-  <section class="section__banner">
+  <section class="section__banner section__editor grey ">
     <div class="container">
-      <div class="section__banner-block">
-        <h1 class="section__title white">Seminare</h1>
-        <p class="section__text white">Entdecken Sie unser vielfältiges Seminarangebot! Ob Managementsysteme, Nachhaltigkeit oder Arbeitssicherheit – bei uns finden Sie praxisorientierte Schulungen, die Sie weiterbringen. Wählen Sie einfach das passende Seminar und sichern Sie sich Ihren Platz!</p>
-        <button class="section__button transparent">Kalender</button>
-      </div>
+      <h1 class="section__title ">Impressum</h1>
     </div>
   </section>
-  <section class="section seminar">
+  <section class="editor">
     <div class="container">
-
-      <div class="seminar__filter">
-        <div class="seminar__topic choose" >
-          <a href="" class="topic__item active">Alle Themen</a>
-          <a href="" class="topic__item">Qualität</a>
-          <a href="" class="topic__item">Umwelt</a>
-          <a href="" class="topic__item">Energie</a>
-          <a href="" class="topic__item">Arbeitssicherheit</a>
-          <a href="" class="topic__item">Audits</a>
-          <a href="" class="topic__item">Nachhaltigkeit</a>
-          <a href="" class="topic__item">Datenschutz</a>
-        </div>
-        <div class="seminar__filter-flex">
-          <div class="seminar__radio">
-            <div class="seminar__radio-item seminar__radio-three choose">
-              <a href="" class="active">Alle Typen</a>
-              <a href="">Regulär</a>
-              <a href="">Exklusiv</a>
-            </div>
-            <div class="seminar__radio-item seminar__radio-two choose">
-              <a href="" class=" active">Online</a>
-              <a href="" >Vor Ort</a>
-            </div>
+      <div class="editor__list">
+        <div class="editor__item">
+          <div class="editor__title">Angaben gemäß § 5 DDG</div>
+          <div class="editor__content">
+            <h2>Pear Academy GmbH</h2>
+            <p>Geschäftsführer: Jan Martin Hecker</p>
+            <p>Edelfrauengrab 33</p>
+            <p>77883 Ottenhöfen im Schwarzwald</p>
+            <p>Registergericht: Amtsgericht Mannheim</p>
+            <p>Registernummer: HRB 738059</p>
           </div>
-          <form class="section__search">
-            <input type="hidden" name="action" value="search">
-            <div class="section__search-input">
-              <input type="text" name="search" placeholder="Seminar suchen…">
-            </div>
-            <button><span>Suche</span></button>
-          </form>
-
         </div>
-      </div>
-      <div class="seminar__card">
-        <div class="card__list seminar__card-list ">
-          <a href="" class="card__item grey  ">
-            <div class="card__img img">
-              <img src="./img/card1.png" alt="">
-              <span class="card__flag right"> Noch 11 Tage</span>
-              <span class="card__flag left"> in Kürze</span>
-            </div>
-            <div class="card__info">
-              <div class="card__date">
-                <span>03 OKT. 24</span>
-                <span class="card__date-loc">Bamberg</span>
-              </div>
-              <h3 class="card__title"> Seminar: QSV - Risk minimization and liability distribution </h3>
-            </div>
-            <div class="card__hover">
-                <div class="card__hover-content content">
-                  <h3>Audits</h3>
-                  <p>Interne Audits sind unverzichtbar, um Prozesse zu optimieren und die Einhaltung von Standards sicherzustellen. Unsere Seminare bereiten Sie optimal darauf vor, als interner Auditor fundierte Prüfungen durchzuführen, Schwachstellen aufzudecken und Verbesserungen gezielt umzusetzen.</p>
-                  <p>Werden Sie zum Experten für interne Audits – wir zeigen Ihnen, wie.</p>
-                </div>
-
-            </div>
-          </a>
-          <a href="" class="card__item green ">
-            <div class="card__img img">
-              <img src="./img/card1.png" alt="">
-              <span class="card__flag right"> Noch 11 Tage</span>
-              <span class="card__flag left"> in Kürze</span>
-            </div>
-            <div class="card__info">
-              <div class="card__date ">
-                <span>03 OKT. 24</span>
-                <span class="card__date-loc online">online</span>
-              </div>
-              <h3 class="card__title"> Seminar: QSV - Risk minimization and liability distribution </h3>
-            </div>
-          </a>
-          <a href="" class="card__item grey ">
-            <div class="card__img img">
-              <img src="./img/card1.png" alt="">
-              <span class="card__flag right"> Noch 11 Tage</span>
-              <span class="card__flag left"> in Kürze</span>
-            </div>
-            <div class="card__info">
-              <div class="card__date  ">
-                <span>03 OKT. 24</span>
-                <span class="card__date-loc online">online</span>
-              </div>
-              <h3 class="card__title"> Seminar: QSV - Risk minimization and liability distribution </h3>
-            </div>
-          </a>
-          <a href="" class="card__item yellow ">
-            <div class="card__img img">
-              <img src="./img/card1.png" alt="">
-              <span class="card__flag right"> Noch 11 Tage</span>
-              <span class="card__flag left"> in Kürze</span>
-            </div>
-            <div class="card__info">
-              <div class="card__date ">
-                <span>03 OKT. 24</span>
-                <span class="card__date-loc online">online</span>
-              </div>
-              <h3 class="card__title"> Seminar: QSV - Risk minimization and liability distribution </h3>
-            </div>
-          </a>
+        <div class="editor__item">
+          <div class="editor__title">Kontakt</div>
+          <div class="editor__content">
+            <p>Telefon: <a href="">+49 176 / 83342260</a></p>
+            <p> E-Mail: <a href="">jmhecker@pear-academy.de</a></p>
+          </div>
+        </div>
+        <div class="editor__item">
+          <div class="editor__title">Umsatzsteuer</div>
+          <div class="editor__content">
+            <p>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE322339413​</p>
+          </div>
+        </div>
+        <div class="editor__item">
+          <div class="editor__title">Streitschlichtung</div>
+          <div class="editor__content">
+            <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+          </div>
+        </div>
+        <div class="editor__item">
+          <div class="editor__title">Haftung für Inhalte</div>
+          <div class="editor__content">
+            <p>Als Diensteanbieter sind wir für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach Artikel 7 DSA sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</p>
+            <p> Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+          </div>
+        </div>
+        <div class="editor__item">
+          <div class="editor__title">Haftung für Links</div>
+          <div class="editor__content">
+            <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p>
+            <p>  Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p>
+          </div>
+        </div>
+        <div class="editor__item">
+          <div class="editor__title">Urheberrecht</div>
+          <div class="editor__content">
+            <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.</p>
+            <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+          </div>
         </div>
       </div>
-
-      <div class="section__form">
-        <div class="section__form-info">
-          <div class="section__more">
-            <div class="section__form-content content">
-              <h3>Sie haben nicht das richtige Thema oder Datum gefunden - Kontaktieren Sie uns für ein Inhouse Seminar</h3>
-              <p>Jedes unserer Seminare können Sie auch direkt bei Ihnen im Unternehmen buchen – maßgeschneidert und perfekt auf Ihre Bedürfnisse abgestimmt. Der größte Vorteil: Wir passen die Inhalte im Vorfeld exakt an Ihre Unternehmensanforderungen an, sodass Sie nicht nur Standardwissen, sondern Lösungen erhalten, die für Ihr Geschäft relevant sind.</p>
-              <p>Mit unseren Inhouse-Seminaren sparen Sie sich Anfahrtswege und Schulungsräume – wir kommen zu Ihnen! Dadurch können Ihre Mitarbeiter in ihrer gewohnten Umgebung gezielt weitergebildet werden, mit Inhalten, die individuell auf Ihre Branche, Abläufe und Herausforderungen zugeschnitten sind. So stellen wir sicher, dass das Gelernte sofort in die Praxis umgesetzt werden kann.</p>
-              <p>Maximale Flexibilität, maßgeschneiderte Inhalte und direkter Praxisbezug – machen Sie den nächsten Schritt und buchen Sie Ihr Inhouse-Seminar noch heute!</p>
-            </div>
-            <button class="section__more-btn">Weniger Information</button>
-          </div>
-
-        </div>
-        <form action="" class="form form__seminar">
-          <input type="hidden" name="action" value="seminar">
-          <div class="form__input">
-            <label>voller Name</label>
-            <input type="text" name="name" placeholder="Max Mustermann">
-          </div>
-          <div class="form__input">
-            <label>E-Mail</label>
-            <input type="text" name="email" placeholder="example@mail.com">
-          </div>
-          <div class="form__input">
-            <label>Telefonnummer</label>
-            <input type="text" name="phone" placeholder="+49 XXX XXXXXXXX">
-          </div>
-          <div class="form__input textarea">
-            <label>Deine Anfrage</label>
-            <textarea name="message" placeholder="Ich möchte..."></textarea>
-          </div>
-          <div class="form__checkbox">
-            <input type="checkbox" id="check"  name="policy_terms">
-            <label for="check">Ich habe die <a href="">Datenschutzerklärung </a> gelesen und stimme der Verarbeitung meiner Daten zur Kontaktaufnahme und Bearbeitung meiner Anfrage zu.</label>
-          </div>
-          <button class="section__button primary">Senden</button>
-        </form>
-      </div>
-
     </div>
 
-
   </section>
+
 
   <!-- FOOTER -->
   <footer class="footer" >
